Updating images and lab members

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
         data-animation="fadeInUp"
       >
         <div class="widget widget_text greylinks topmargin_20">
-          <h3 class="widget-title">PINE labs</h3>
+          <h3 class="widget-title">PINE lab</h3>
           <p>Participation, Inclusion, and Education.</p>
 
           &nbsp;
