--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
           class="logo logo_image"
         >
           <img
-            src="https://psyclin.github.io/PineLabs/images/logo.png"
+            src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
             alt=""
           />
         </a>
