--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -126,7 +126,7 @@
                       <div class="slide_description_wrapper slide_text_top">
                         <div class="slide_description">
                           <div class="intro-layer" data-animation="fadeInLeft">
-                            <h3>PINE Labs</h3>
+                            <h3>PINE Lab</h3>
                           </div>
                           <div class="intro-layer" data-animation="fadeInLeft">
                             <p class="grey big">
