--- a/lab_members.html
+++ b/lab_members.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -275,14 +275,14 @@
                       <img src="images/team/Amir Shamsi Ardekani.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="members/amir_shamsi_ardekani.html"
-                            >Amir Shamsi Ardekani</a
+                          <a href="members/amir_shamsi.html"
+                            >Amir Shamsi</a
                           >
                         </h3>
                         <p>Masters student, University of Alberta</p>
                         <div class="item-button darklinks">
                           <a
-                            href="members/amir_shamsi_ardekani.html"
+                            href="members/amir_shamsi.html"
                             class="small-text"
                             >About</a
                           >
@@ -295,6 +295,31 @@
             </div>
           </div>
         </section>
+        <section
+        class="page_breadcrumbs cs main_color2 parallax section_padding_25"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 text-center">
+              <h2>Previous Members</h2>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+      class="ls page_portfolio section_padding_top_25 section_padding_bottom_25"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            
+              <h3 style="text-align: center;" > Coming soon...</h3>
+
+          </div>
+        </div>
+      </div>
+    </section>
 
         <div id="footer"></div>
         <!-- eof #box_wrapper -->
