--- a/members/amir_shamsi.html
+++ b/members/amir_shamsi.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -123,7 +123,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
-                <h2>Amir Shamsi Ardekani</h2>
+                <h2>Amir Shamsi</h2>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
                     alt=""
                     class="round"
                   />
-                  <h2 class="bottommargin_0">Amir Shamsi Ardekani</h2>
+                  <h2 class="bottommargin_0">Amir Shamsi</h2>
                   <p class="small-text">Masters Student</p>
                 </div>
 
@@ -186,7 +186,9 @@
                       with invaluable clinical experience that informs my
                       research and teaching approach. Under Dr. Roberts
                       supervision, I aim to conduct world-class research in
-                      rehabilitation education.
+                      rehabilitation education. To learn more about my work please check out my 
+                      ResearchGate profile: <br> <a href="https://www.researchgate.net/profile/Amir-Shamsi">https://www.researchgate.net/profile/Amir-Shamsi</a>
+
                     </p>
                     <h3 class="topmargin_0">Master's Thesis:</h3>
                     <p>To be added...</p>
