--- a/members/fatema_akbar.html
+++ b/members/fatema_akbar.html
@@ -175,9 +175,26 @@
                 <div class="tab-content top-color-border bottommargin_30">
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
-                    <p>To be added...</p>
+                    <p>Fatema is a curious mind and a researcher at heart, currently pursuing her PhD at University of
+                      Alberta. Her love for research comes from a simple but powerful desire: the need to
+                      understand everything she reads or hears. If something sparks her interest, she dives in
+                      
+                      headfirst to explore every detail, and this is what drives her every day—whether it’s a new
+                      theory or a question that needs answering.
+                      After completing her Bachelor’s in Occupational Therapy with Honours at the University of
+                      Newcastle, Australia, FA worked as an occupational therapist in Kuwait. There, she was part of
+                      the team that helped establish the country’s first geriatric clinic, which gave her hands-on
+                      experience in the field and exposed her to a major gap in geriatric care. This led her to pursue a
+                      Master’s degree at Cardiff University, UK, where her fascination with research truly took off.
+                      FA fell in love with research during her MSc and quickly realized that her strengths lay in digging
+                      deep into topics that often go overlooked in traditional practice. Her curiosity and drive led her
+                      to Canada, where she is now pursuing a PhD, exploring new ways to bridge gaps in occupational
+                      therapy, especially in multicultural and geriatric contexts.
+                      Her research aims to challenge existing boundaries and find creative solutions to the issues that
+                      matter most in her field, from multicultural perspectives in therapy to improving outcomes for
+                      aging populations.</p>
                     <h3 class="topmargin_0">Ph. D. Thesis:</h3>
-                    <p>To be added...</p>
+                    <p>Digitizing cognitive assessments and the incorporation of AI for dementia in the MENA region.</p>
                   </div>
 
                   <div class="tab-pane fade in inactive" id="tab2">
