--- a/members/priya_kar.html
+++ b/members/priya_kar.html
@@ -135,7 +135,7 @@
               <div class="col-md-5">
                 <div class="text-center">
                   <img
-                    src="https://psyclin.github.io/PineLabs/images/team/03.jpg"
+                    src="https://psyclin.github.io/PineLabs/images/team/Priya Kar.jpg"
                     alt=""
                     class="round"
                   />
@@ -175,11 +175,18 @@
                 <div class="tab-content top-color-border bottommargin_30">
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
-                    <p>To be added...</p>
+                    <p>Priya kar is a Master&#39;s student in the Department of Rehabilitation Science at the University of
+                      Alberta. Having completed a Bachelors of Arts in Psychology, Priya&#39;s interest in addressing
+                      barriers in mental health care inspired her to pursue her Masters. Her current research explores
+                      mental health help-seeking behaviours and experiences among university students, particularly
+                      men. Additionally, Priya has experience working with diverse populations, volunteering with
+                      youth and families affected by trauma and promoting inclusive learning environments for
+                      neurodivergent students. She is keen to foster supportive environments and advance evidence-
+                      based practice.</p>
                     <h3 class="topmargin_0">Master's Thesis:</h3>
                     <p>
-                      The Influence of Restrictive Emotionality on Mental Health
-                      Help-Seeking Among University-Aged Men
+                      The Influence of Restrictive Emotionality on Mental Health Help-Seeking
+Among University Aged-Men
                     </p>
                   </div>
 
