--- a/members/rosanna_wegner.html
+++ b/members/rosanna_wegner.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -135,7 +135,7 @@
               <div class="col-md-5">
                 <div class="text-center">
                   <img
-                    src="https://psyclin.github.io/PineLabs/images/team/02.jpg"
+                    src="https://psyclin.github.io/PineLabs/images/team/Rosanna Wegner.jpg"
                     alt=""
                     class="round"
                   />
@@ -175,18 +175,34 @@
                 <div class="tab-content top-color-border bottommargin_30">
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
-                    <p>To be added...</p>
+                    <p>Rosanna is dedicated to empowering autonomy in people living with chronic diseases to lead
+                      meaningful lives. As an occupational therapist and team lead, she bridges evidence-informed
+                      practices with clinical providers and decision makers in a practical and accessible way. Rosanna
+                      has worked on provincial initiatives to expand Alberta’s community rehabilitation model of care
+                      for adults. 
+                      She is currently pursuing her master’s thesis to explore the perceived benefits of virtual chronic
+                      pain management programs for individuals living with chronic pain. This study will inform
+                      provincial pain programs how virtual pain management interventions can be better designed to
+                      reflect participant needs and inform virtual program planning, implementation and evaluation.
+                      With the logic of ‘the right person in the right program’, the goal is to reduce the
+                      healthcare burden in Canada by supporting the ones who benefit from a virtual self-
+                      management approach while enabling the individuals who require in-person intervention(s)
+                      more timely access to care.
+                      Rosanna graduated from the University of Alberta in 2005 with a Bachelor of Science in
+                      Occupational Therapy, and her diverse clinical experience spans Edmonton, the USA, and South
+                      Africa.</p>
                     <h3 class="topmargin_0">Master's Thesis:</h3>
                     <p>
-                      Effectiveness of wellness strategies for adults living
-                      with chronic pain
+                      The perceived benefits of a virtual pain management program: A qualitative inquiry on
+participants with lived experience.
                     </p>
                   </div>
 
                   <div class="tab-pane fade in inactive" id="tab2">
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
-                      <li>To be added...</li>
+                      <li>Wenger, R., &amp; Chen, S-P. (under review). Group virtual pain management programs during and
+                        after the COVID-19 pandemic: A scoping review.</li>
                     </ul>
                   </div>
                 </div>
