--- a/principal_investigators.html
+++ b/principal_investigators.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -133,7 +133,7 @@
                             <div class="container">
                               <div class="row">
                                 <div class="col-sm-5">
-                                  <img src=images/team/01.jpg alt="" style="">
+                                  <img src="images/team/Shu-Ping.jpg" alt="" style="">
                                 </div>
 
                                 <div
@@ -294,7 +294,7 @@
                             <div class="container">
                               <div class="row">
                                 <div class="col-sm-5">
-                                  <img src=images/team/01.jpg alt="">
+                                  <img src="images/team/Mary Roduta Roberts.jpg" alt="">
                                 </div>
                                 <div
                                   class="col-sm-6 col-sm-push-1"
@@ -319,9 +319,9 @@
                                   </div>
                                   <div class="col-sm-6">
                                     <p>
-                                      <b>Email:</b> shuping2@ualberta.ca <br />
+                                      <b>Email:</b> mroberts@ualberta.ca  <br />
                                       <b>Office Telephone:</b><br />
-                                      (780) 492-3905
+                                      (780) 492-7274
                                     </p>
                                   </div>
                                 </div>
@@ -330,87 +330,14 @@
                           </section>
                           <h1>Research overview</h1>
                           <p>
-                            The overarching goals of my research program are to
-                            contribute to better practices in assessment,
-                            support and promote evidence-based educational
-                            decision-making, and demonstrate the potential of
-                            assessment for enabling positive educational and
-                            social outcomes through their use. My research is
-                            interdisciplinary, and I draw from my diverse
-                            academic backgrounds to improve research and
-                            practice in health professions education and
-                            educational measurement.
+                            The overarching goals of my research program are to contribute to better practices in assessment, support and promote evidence-based educational decision-making, and demonstrate the potential of assessment for enabling positive educational and social outcomes through their use. My research is interdisciplinary, and I draw from my diverse academic backgrounds to improve research and practice in health professions education and educational measurement.
+
                           </p>
                           <div id="mary-research" class="blog-more collapse">
                             <p>
-                              My research aims to elevate the role of effective
-                              assessment practices through studies of
-                              development, evaluation of quality, and
-                              consequences of use, mainly in the context of
-                              health professions education. Leveraging my
-                              measurement background, my research also involves
-                              collaborations with health-oriented research teams
-                              to evaluate assessment measures to support
-                              clinical practice and improve patient outcomes.
-                              The combination of my cross-disciplinary knowledge
-                              and skills from occupational therapy and
-                              educational measurement, is unique, positioning my
-                              research contributions at the forefront of
-                              occupational therapy education and supporting
-                              clinical practice. I am driven by the premise that
-                              we always assess for a reason, both in education
-                              and in clinical practice. Assessment is inherently
-                              consequential and can have an enormous impact on
-                              people’s lives, affecting access to programs,
-                              services, and societal opportunities. Effective
-                              assessment should yield useful, high-quality
-                              information to support educational and clinical
-                              decision- making. I engage in educational and
-                              measurement research to support the learning and
-                              development of competent and capable health
-                              professionals and future citizens of the world who
-                              continue to pursue lifelong learning and
-                              contribute positively to their communities. To
-                              this end, I engage in two related areas of
-                              research. My primary research area focusing on
-                              educational assessment and measurement comprises
-                              two areas: assessment of practice-based
-                              competencies and communication of assessment
-                              results/score reporting. Valid interpretations and
-                              uses of assessment results can facilitate positive
-                              student outcomes. For example, assessment provides
-                              information to students about their current level
-                              of learning, and feedback to improve the
-                              development of knowledge and skills going forward.
-                              Assessment can better identify students who may
-                              need extra support or remedial activities to
-                              succeed. Assessment can also provide evidence of
-                              gaps or areas of misalignment between curriculum
-                              and instructional methods that could impact
-                              student outcomes. Validation, the process of
-                              generating and collecting evidence to evaluate the
-                              interpretations, decisions, and uses of assessment
-                              results, serves as the foundation of my research
-                              within the area of educational assessment and
-                              measurement. My secondary research area focuses on
-                              the application of methodological approaches to
-                              assessing health-related constructs. As a
-                              methodologist, I aim to build methodological
-                              skills through engagement in projects outside the
-                              context of educational assessment. Engagement
-                              within this area of research focus is often
-                              collaborative where I also aim to build capacity
-                              within students and research colleagues regarding
-                              methods, measurement, and evaluation. Both areas
-                              of research focus inform each other where the
-                              application of methodological approaches in one
-                              context may be adapted and tested for their
-                              applicability within a different research context.
-                              Throughout my research career, I have employed
-                              various methodologies in my research including
-                              multivariate analyses, factor analyses, structural
-                              equation modeling, cognitive- psychometric
-                              methods, and think-alouds.
+                              My research aims to elevate the role of effective assessment practices through studies of development, evaluation of quality, and consequences of use, mainly in the context of health professions education. Leveraging my measurement background, my research also involves collaborations with health-oriented research teams to evaluate assessment measures to support clinical practice and improve patient outcomes. The combination of my cross-disciplinary knowledge and skills from occupational therapy, educational measurement, and research methodology is unique, with my research contributions addressing methodological and applied research questions that cut across education and health contexts.
+Assessment is inherently consequential and can enormously impact people’s lives, affecting program progression, access to services and to societal opportunities. I am driven by the premise that we should always be clear in our purpose for assessing an individual, both in education and clinical practice. As such, our assessment practices should yield useful and actionable high-quality information to support educational and clinical decision-making. I engage in educational and measurement research to support the learning goals and development of competent and capable professionals who pursue lifelong learning and contribute positively to their communities. 
+My research program comprises two related areas of research. My primary research focus, educational assessment and measurement, comprises two areas: assessment of practice-based competencies and communication of assessment results/score reporting. A secondary research focus is the application of methodological approaches to assessing health-related constructs. As a methodologist, I aim to build methodological skills through engagement in projects outside educational assessment. Both areas of research focus inform each other where the application of methodological approaches in one context may be adapted and tested for their applicability within a different research context. 
                             </p>
                           </div>
                           <!-- eof blog-more -->
