--- a/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
+++ b/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -150,19 +150,32 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      This project aims to build the capacity of immigrant-serving agencies to provide
+                      Occupational Health and Safety and Workers’ Rights training to immigrant workers and to
+                      strengthen the capacity of new immigrant workers to exercise their rights to safe work
+                      practices. In the first activity, a comprehensive review of documents, an online survey, and
+                      interviews with key stakeholders were undertaken to assess the landscape of occupational
+                      health and safety training and support.
+                      The findings indicated a significant gap: existing training programs were not adequately
+                      reducing workplace safety risks, and new immigrant workers (NIWs) did not feel capable of
+                      asserting their work-related rights. Based on these findings, the second activity engaged nine
+                      immigrant workers in participatory action research. Over the course of three months, they
+                      discussed their specific challenges and needs and strategized on possible actions.
+                      The primary concerns highlighted were insufficient training, lack of awareness about their
+                      rights regarding occupational health and safety, reluctance to report safety issues for fear of
+                      retaliation, and experiences of psychological threats, such as discrimination. Five educational
+                      modules were co-created, addressing the real-life issues these workers faced. These modules
+                      cover critical topics such as the importance of OHS, psychological hazards, understanding
+                      Canadian workplace culture, effective communication strategies, and essential resources.
+                      Tailored to the nuanced needs of NIWs, these modules were then widely shared with
+                      immigrant-serving agencies.
+                      The final research activity involved eight immigrants in a participatory research effort
+                      focused on building their capacity to advocate for their safety rights in the workplace. These
+                      participants jointly identified their main concerns—feelings of marginalization, job
+                      insecurity, and insufficient resources—and developed collective actions to address these
+                      issues. Among the solutions was the creation of a peer support network, a platform for
+                      sharing resources, empowering newcomers to promote workplace well-being.
+                      Study funded by the Social Sciences and Humanities Research Council of Canada (SSHRC)
                     </p>
                   </div>
                 </div>
