--- a/projects/participatory_action_research_for_peer_support_mentorship_development.html
+++ b/projects/participatory_action_research_for_peer_support_mentorship_development.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -150,19 +150,34 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      This project aims to enable individuals with serious mental illness to secure, sustain, and
+advance employment within the community-based workforce. By employing a
+participatory approach, the initiative engages individuals with lived experiences to
+directly address employment challenges faced by those with mental health challenges.
+In the first phase of the study, interviews were conducted with nine individuals with lived
+experience, four employers, and seven service providers. From these interviews, three
+critical components were identified for job retention and career progression for people
+with serious mental illness (PSMI): (1) Support within and outside the workplace; (2)
+Continuous access to mental health and employment services; and (3) Positive self-
+perception, work-related resiliency, and effective symptom management among
+employees.
+Based on these findings, the second phase involved participatory action research (PAR)
+aimed at empowering PSMI to co-develop a peer-support network. This network focuses
+on enhancing their value as employees and identifying as well as managing challenges
+related to achieving longer job tenure and career advancement. Ten participants as co-
+researchers involving in the PAR process experienced significant transformative benefits,
+culminating in the establishment of a peer support network. They collaboratively engaged
+in three steps of the action research cycle over a 3-month period and decided that
+establishing peer support is a prioritized action.
+Currently, the group continues to meet biweekly, with plans to expand into a national
+online peer support network. The success and ongoing commitment of the group
+
+highlight the importance of inclusive and participatory research methods in addressing
+employment challenges for PSMI. This approach not only enhances their employment
+outcomes but also fosters a sense of community and mutual support among participants.
+A novel contribution to the field was the development of a sustained partnership with co-
+researchers, attributed to the investment in building relationships, facilitating genuine
+power-sharing, and promoting peer support.<br>Study funded by the Social Sciences and Humanities Research Council of Canada (SSHRC)
                     </p>
                   </div>
                 </div>
