--- a/projects/refinement_and_further_development_of_the_washington_assessment.html
+++ b/projects/refinement_and_further_development_of_the_washington_assessment.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -150,19 +150,20 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      This measurement project, led by Dr. Strand at WSU Tri-Cities and Drs. French, Gotch, and Poppen at
+                      WSU Pullman aim to refine and further develop the Washington Assessment of the Risks and Needs of
+                      Students (WARNS). School truancy is a nationwide problem in the US that contributes to school failure
+                      and dropout, negative mental and physical health outcomes, social maladjustment, and lower levels of
+                      occupational and economic attainment. The WARNS is an assessment that validly and reliably assesses
+                      factors related to school truancy. More than 80 school districts in Washington use the WARNS as a point
+                      of entry into self-reflection and solution-focused conversations between counselors and students.
+                      Dr. Roduta Roberts and Dr. Gotch are developing and exploring the use of narratives or vignettes as an
+                      adjunct to traditional score reports from the WARNS. While current reports help identify heightened
+                      areas of risk and need, they present an atomized view of the student. Vignettes reassemble students
+                      ’responses to the WARNS into a coherent picture of how profiles of risk and need manifest in everyday
+                      settings. The intent is for counselors and students to explore vignette content that resonates with
+                      students’ lived experiences, thereby supporting more effective intervention planning.
+                      Study funded by the Institute of Educational Sciences (IES), US Department of Education
                     </p>
                   </div>
                 </div>
