--- a/projects/student_alcohol_consumption_in_university_residences.html
+++ b/projects/student_alcohol_consumption_in_university_residences.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -150,19 +150,16 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      The study explores the influence of alcohol culture on first-year students living in
+                      residences across five Canadian universities. High rates of heavy episodic drinking,
+                      driven by social norms and the desire for integration, remain a pressing issue. Using
+                      institutional ethnography, researchers analyzed interviews with 51 students and 26
+                      residence staff, along with 30 policies on drinking and wellness.
+                      The study emphasizes that cultural influences on drinking are often overlooked in harm
+                      reduction strategies. By fostering inclusive, supportive policies and small cultural shifts,
+                      institutions can encourage safer and more responsible drinking practices, promoting a
+                      healthier campus environment.
+                      Study funded by the Canadian Institutes of Health Research (CIHR)
                     </p>
                   </div>
                 </div>
