--- a/projects/towards_diversity_in_occupational_therapy_education.html
+++ b/projects/towards_diversity_in_occupational_therapy_education.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -151,19 +151,20 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      In the context of health professions education, studies have demonstrated that non-cognitive skills, as
+                      assessed by a situational judgement test such as Casper, are a better predictor than GPA of performance
+                      in fieldwork, which comprises activities closely aligned with professional practice. Dr. Roduta Roberts’
+                      recent study demonstrated that assigning greater weight to Casper versus GPA when making selection
+                      decisions optimized the prediction of performance in fieldwork and led to small changes in the diversity,
+                      or background characteristics, of a selected cohort. Together, these studies suggest that the historic
+                      emphasis on GPA is an insufficient metric and may pose an unnecessary barrier to students. Admissions
+                      strategies such as assigning optimal weights to measures of achievement and non-cognitive skill alone
+                      cannot diversify the applicant pool if diverse students are not making applications in the first place.
+                      Pathway programs has been noted as a strategy to recruit and retain diverse applicants to health
+                      professions programs. This study explores the potential of pathway programs and their integration with
+                      
+                      admissions practices in occupational therapy from the perspective of aspiring health professions
+                      students with diverse lived experiences.
                     </p>
                   </div>
                 </div>
