--- a/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
+++ b/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -151,19 +151,12 @@
                     </p>
 
                     <p id="projectDescription">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Doloremque debitis fuga eum, velit deleniti perferendis
-                      fugit necessitatibus inventore expedita accusantium animi
-                      provident aspernatur, accusamus in nobis illo?
-                      Exercitationem, deserunt esse. Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus. Lorem ipsum dolor sit
-                      amet, consectetur adipisicing elit. Amet minima laboriosam
-                      dolores sunt pariatur quia, non maxime excepturi expedita,
-                      animi rem earum temporibus quidem molestias. Aut
-                      blanditiis, nulla esse accusamus.
+                      Strong academic and interpersonal skills are required to succeed as a health professional. Casper, an
+                      online situational judgement test that assesses personal and professional characteristics, is used in
+                      admissions to health professions programs. This validity study explores the incremental validity of
+                      Casper over GPA for predicting student performance and how Casper could be used to impact the
+                      diversity of a cohort selected for admission to an occupational therapy program.
+                      Study funded by the Alo Grant
                     </p>
                   </div>
                 </div>
