--- a/group_projects.html
+++ b/group_projects.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -157,10 +157,10 @@
                             >
                           </h4>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Quis pariatur incidunt voluptate adipisci
-                            mollitia quibusdam molestiae laboriosam. Veritatis
-                            esse cum aut laboriosam excepturi.
+                            This project aims to enable individuals with serious mental illness to secure, sustain, and
+advance employment within the community-based workforce. By employing a
+participatory approach, the initiative engages individuals with lived experiences to
+directly address employment challenges faced by those with mental health challenges.
                           </p>
                           <div class="item-button darklinks">
                             <a
@@ -247,10 +247,11 @@
                             >
                           </h4>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Quis pariatur incidunt voluptate adipisci
-                            mollitia quibusdam molestiae laboriosam. Veritatis
-                            esse cum aut laboriosam excepturi.
+                            The study explores the influence of alcohol culture on first-year students living in
+                            residences across five Canadian universities. High rates of heavy episodic drinking,
+                            driven by social norms and the desire for integration, remain a pressing issue. Using
+                            institutional ethnography, researchers analyzed interviews with 51 students and 26
+                            residence staff, along with 30 policies on drinking and wellness.
                           </p>
                           <div class="item-button darklinks">
                             <a
@@ -291,10 +292,12 @@
                             >
                           </h4>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Quis pariatur incidunt voluptate adipisci
-                            mollitia quibusdam molestiae laboriosam. Veritatis
-                            esse cum aut laboriosam excepturi.
+                            This project aims to build the capacity of immigrant-serving agencies to provide
+Occupational Health and Safety and Workers’ Rights training to immigrant workers and to
+strengthen the capacity of new immigrant workers to exercise their rights to safe work
+practices. In the first activity, a comprehensive review of documents, an online survey, and
+interviews with key stakeholders were undertaken to assess the landscape of occupational
+health and safety training and support.
                           </p>
                           <div class="item-button darklinks">
                             <a
@@ -333,15 +336,25 @@
                           <a
                             href="https://psyclin.github.io/PineLabs/projects/towards_diversity_in_occupational_therapy_education.html"
                             >Towards Diversity in Occupational Therapy
-                            Education: An Integrated Admissions-and- Pathway
+                            Education: An Integrated Admissions-and-Pathway
                             Strategy via Student Engagement</a
                           >
                         </h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Quis pariatur incidunt voluptate adipisci
-                          mollitia quibusdam molestiae laboriosam. Veritatis
-                          esse cum aut laboriosam excepturi.
+                          In the context of health professions education, studies have demonstrated that non-cognitive skills, as
+                          assessed by a situational judgement test such as Casper, are a better predictor than GPA of performance
+                          in fieldwork, which comprises activities closely aligned with professional practice. Dr. Roduta Roberts’
+                          recent study demonstrated that assigning greater weight to Casper versus GPA when making selection
+                          decisions optimized the prediction of performance in fieldwork and led to small changes in the diversity,
+                          or background characteristics, of a selected cohort. Together, these studies suggest that the historic
+                          emphasis on GPA is an insufficient metric and may pose an unnecessary barrier to students. Admissions
+                          strategies such as assigning optimal weights to measures of achievement and non-cognitive skill alone
+                          cannot diversify the applicant pool if diverse students are not making applications in the first place.
+                          Pathway programs has been noted as a strategy to recruit and retain diverse applicants to health
+                          professions programs. This study explores the potential of pathway programs and their integration with
+                          
+                          admissions practices in occupational therapy from the perspective of aspiring health professions
+                          students with diverse lived experiences.
                         </p>
                         <div class="item-button darklinks">
                           <a
@@ -428,10 +441,13 @@
                           >
                         </h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Quis pariatur incidunt voluptate adipisci
-                          mollitia quibusdam molestiae laboriosam. Veritatis
-                          esse cum aut laboriosam excepturi.
+                          This measurement project, led by Dr. Strand at WSU Tri-Cities and Drs. French, Gotch, and Poppen at
+WSU Pullman aim to refine and further develop the Washington Assessment of the Risks and Needs of
+Students (WARNS). School truancy is a nationwide problem in the US that contributes to school failure
+and dropout, negative mental and physical health outcomes, social maladjustment, and lower levels of
+occupational and economic attainment. The WARNS is an assessment that validly and reliably assesses
+factors related to school truancy. More than 80 school districts in Washington use the WARNS as a point
+of entry into self-reflection and solution-focused conversations between counselors and students.
                         </p>
                         <div class="item-button darklinks">
                           <a
@@ -472,10 +488,11 @@
                           >
                         </h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Quis pariatur incidunt voluptate adipisci
-                          mollitia quibusdam molestiae laboriosam. Veritatis
-                          esse cum aut laboriosam excepturi.
+                          Strong academic and interpersonal skills are required to succeed as a health professional. Casper, an
+                          online situational judgement test that assesses personal and professional characteristics, is used in
+                          admissions to health professions programs. This validity study explores the incremental validity of
+                          Casper over GPA for predicting student performance and how Casper could be used to impact the
+                          diversity of a cohort selected for admission to an occupational therapy program.
                         </p>
                         <div class="item-button darklinks">
                           <a
