--- a/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
+++ b/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
