--- a/projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html
+++ b/projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
 
   <head>
-    <title>PINELabs</title>
+    <title>PINELab</title>
     <meta charset="utf-8" />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
