--- a/lab_members.html
+++ b/lab_members.html
@@ -230,7 +230,7 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/03.jpg" alt="" />
+                      <img src="images/team/Priya Kar.jpg" alt="" />
                       <div class="caption">
                         <h3>
                           <a href="members/priya_kar.html">Priya Kar</a>
@@ -249,7 +249,7 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/02.jpg" alt="" />
+                      <img src="images/team/Rosanna Wegner.jpg" alt="" />
                       <div class="caption">
                         <h3>
                           <a href="members/rosanna_wegner.html"
