--- a/footer.html
+++ b/footer.html
@@ -10,8 +10,21 @@
         <div class="widget widget_text greylinks topmargin_20">
           <h3 class="widget-title">PINE lab</h3>
           <p>Participation, Inclusion, and Education.</p>
-
           &nbsp;
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-5">
+          <a
+            href="https://psyclin.github.io/PineLabs/index.html"
+            class="logo logo_image"
+          >
+            <img
+              src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
+              alt=""
+            />
+          </a>
+          <span class="toggle_menu visible-xs">
+            <span></span>
+          </span>
         </div>
       </div>
       <div
